# Wawona

./: .gitignore  CHANGELOG.md  Cargo.toml  Package.resolved  Package.swift  README.md  build.rs  flake.nix
.github/scripts/: verify-android-maintainability.py  verify-macos-target-matrix.py  verify-smithay-coverage-contract.py  verify-wayland-no-equivalent-closure.py  verify-wayland-profile-smoke.py  verify-wayland-protocol-manifest.py  verify-wayland-runtime-ownership.py
.github/workflows/: nix.yml  release.yml
Darwin/Sources/: Main.swift
Sources/WawonaModel/: ClientLauncher.swift  MachineProfile.swift  SessionOrchestrator.swift  WawonaModel.h  WawonaPreferences.swift  module.modulemap
Sources/WawonaModel/Skip/: skip.yml
Sources/WawonaUI/: CompositorBridge.swift  ContentView.swift  UIContractAdapters.swift  View+WawonaTextField.swift  WawonaApp.swift  WelcomeView.swift
Sources/WawonaUI/Components/: AdaptiveNavigationView.swift  GlassCard.swift
Sources/WawonaUI/Machines/: AndroidMachineCompositorChrome.swift  MachineCardView.swift  MachineDetailView.swift  MachineEditorView.swift  MachinesGridView.swift  MachinesRootView.swift  NativeCompositorPrefs.swift
Sources/WawonaUI/Settings/: AboutView.swift  AdvancedSettingsView.swift  ClientsSettingsView.swift  ConnectionSettingsView.swift  DisplaySettingsView.swift  GlobalConnectionTestsView.swift  GraphicsSettingsView.swift  InputSettingsView.swift  MachineSettingsView.swift  SSHWaypipeSettingsView.swift  SettingsDiagnosticsView.swift  SettingsRootView.swift
Sources/WawonaUI/VisionOS/: WawonaVisionShell.swift
Sources/WawonaUI/Wear/: WawonaWearCompactRootView.swift
Sources/WawonaUIContracts/: MachineEditorContracts.swift  SettingsContracts.swift
Sources/WawonaUIContracts/Skip/: skip.yml
Sources/WawonaWatch/: CompositorActiveView.swift  MachineEditorView.swift  MachineStatusView.swift  QuickConnectView.swift  SessionGlanceView.swift  WawonaSettingsView.swift  WawonaWatchApp.swift  WawonaWatchMain.swift
Tests/WawonaModelSettingsTests/: WawonaModelSettingsTests.swift
Tests/WawonaUIContractsTests/: MachineEditorContractsTests.swift  SettingsContractsTests.swift
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/Skip/: SkipBridge-debug.aar  SkipFoundation-debug.aar  SkipLib-debug.aar  SkipModel-debug.aar  SkipSwiftUI-debug.aar  SkipUnit-debug.aar  WawonaModel-debug.aar  WawonaUI-debug.aar  WawonaUIContracts-debug.aar
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  wawona_client_stubs.c
dependencies/: gradle-deps.json  gradle-deps.nix
dependencies/android/: sdk-config.nix
dependencies/clients/foot/: android.nix  ios.nix  ipados.nix  macos.nix  watchos.nix
dependencies/clients/weston/: android.nix  ios.nix  ipados.nix  macos.nix  mobile-weston-terminal.c  watchos.nix
dependencies/generators/: gradlegen.nix  xcodegen.nix
dependencies/libs/epoll-shim/: ios.nix  ipados.nix  macos.nix  watchos.nix
dependencies/libs/expat/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/fcft/: macos.nix
dependencies/libs/ffmpeg/: android.nix  ios.nix  ipados.nix  macos.nix  watchos.nix
dependencies/libs/fontconfig/: macos.nix
dependencies/libs/freetype/: macos.nix
dependencies/libs/libffi/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/libssh2/: android.nix  ios.nix  ipados.nix
dependencies/libs/libwayland/: android.nix  ios.nix  ipados.nix  macos.nix  watchos.nix
dependencies/libs/libxml2/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/lz4/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/mbedtls/: android.nix  ios.nix  ipados.nix
dependencies/libs/openssh/: android.nix  ipados.nix
dependencies/libs/openssl/: android.nix  ios.nix  ipados.nix
dependencies/libs/pixman/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/spirv-tools/: ipados.nix  macos.nix
dependencies/libs/sshpass/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/swiftshader/: android.nix
dependencies/libs/tllist/: macos.nix
dependencies/libs/utf8proc/: macos.nix
dependencies/libs/vulkan-cts/: android.nix  gl-cts-android.nix  gl-cts-macos.nix  ios.nix  macos.nix
dependencies/libs/waypipe/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/weston-simple-shm/: ios.nix  ipados.nix  linux.nix  tvos.nix  visionos.nix  watchos.nix
dependencies/libs/xkbcommon/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/libs/zlib/: ios.nix  ipados.nix
dependencies/libs/zstd/: android.nix  ios.nix  ipados.nix  macos.nix
dependencies/toolchains/: android.nix  default.nix  ios-xcodeenv.nix
dependencies/toolchains/common/: registry.nix
dependencies/toolchains/xcodeenv/: build-app.nix  compose-xcodewrapper.nix
dependencies/tools/: skip.nix
dependencies/utils/: android-wrapper.nix  xcode-wrapper.nix
dependencies/wawona/: android.nix  app-programs.nix  common.nix  default.nix  devshells.nix  ios.nix  ipados.nix  linux-host.nix  linux-tray.nix  linux-vm.nix  linux.nix  macos.nix  rust-backend-android-brp.nix  rust-backend-c2n.nix  shell-wrappers.nix  tvos.nix  visionos.nix  watchos.nix  wearos.nix  workspace-src.nix
docs/: 2026-ARCHITECTURE-STRUCTURE.md  2026-PROGRESS-TRACKER.md  2026-SKIP-INTEGRATION.md  2026-SKIP-PARITY-AUDIT.md  2026-SOURCE-LAYOUT-RULES.md  2026-UI-PARITY-CHECKLIST.md  2026-Wawona-software-bloat.md  README.md  android-upgrade-guardrails.md  compilation.md  linux-testing.md  settings.md  usage.md
docs/compliance/: non-smithay-survivors.md  policy-traceability.md  smithay-adoption-architecture-matrix.md  smithay-docs-index.md  smithay-feasibility-ledger.md
scripts/: embed-android-shaders.sh  ensure-waypipe.sh  fetch_store_policies.py  local-runner.nix  local_runner.py  test-macos-build-matrix.sh  test-wayland-compat-matrix.sh  ui_parity_diff.py
src/: lib.rs
src/core/: compositor.rs
src/ffi/: api.rs  c_api.rs  types.rs
src/linux/: config.rs  launcher.rs  mod.rs  runtime.rs  service.rs
src/tests/: integration.rs  window_management.rs
(+99 files in other folders)
